--- a/scss/template/_preloader.scss
+++ b/scss/template/_preloader.scss
@@ -1,60 +1,18 @@
-.loader {
+.pre-loader {
   position: fixed;
-  left: 0;
   top: 0;
-  width: 100%;
-  height: 100%;
+  left: 0;
+  right: 0;
+  bottom: 0;
+  background-color: $white;
   z-index: 9999;
-  background: $white;
-  transition: 0.1s all;
-  opacity: 1;
 
-  .preloader {
+  .load-icon {
     position: absolute;
-    transform: translate(-50%, -50%);
+    width: 50px;
+    height: 50px;
     left: 50%;
     top: 50%;
-
-    &__dot {
-      animation: bounce-fade 1s infinite ease-in-out;
-      border-radius: 8px;
-      background: $violet;
-      display: block;
-      width: 8px;
-      height: 8px;
-      margin: 0 2px;
-      transform: translateY(0);
-      opacity: 1;
-      $item: 4;
-      @for $i from 1 to $item {
-        &:nth-child(#{$i}) {
-          animation-delay: $i * 0.25s;
-        }
-      }
-    }
-  }
-  &.done {
-    opacity: 0;
-  }
-}
-@keyframes bounce-fade {
-  0%,
-  100% {
-    transform: translateY(0);
-    opacity: 1;
-  }
-
-  30% {
-    opacity: 0.6;
-  }
-
-  80% {
-    opacity: 0.4;
-    transform: translateY(-10px);
-  }
-
-  90% {
-    opacity: 0.2;
-    transform: translateY(-5px);
+    transform: translate(-50%, -50%);
   }
 }
